# TodoList

./: .editorconfig  .gitignore  README.md  README.zh-CN.md  eslint.config.js  index.html  package-lock.json  package.json  plan.md  vite.config.ts
docs/: branding-guide.md  development-plan.md  development-readiness.md  git-history.md  github-release-publish-guide-zh.md  github-release-v0.1.0.md  manual-acceptance-checklist.md  mvp-task-breakdown.md  publish-checklist-v0.1.0.md  release-guide.md  release-notes-v0.1.0.md  requirements.md  tech-stack.md  user-guide.md
scripts/: check-dev-env.cmd  vs-dev-shell.cmd
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src/app/: App.tsx  i18n.ts
src/features/todos/: schema.ts
src/features/todos/components/: TodoShell.tsx
src/services/: todos.ts
src/store/: todo-store.ts
src/styles/: index.css
src/types/: category.ts  settings.ts  todo.ts
